# pokemon-battle-analysis-v5

./: .gitignore  Cargo.toml
benches/: my_benchmark.rs
resources/firered_leafgreen/: moves.json  species.json
resources/heartgold_soulsilver/: moves.json  species.json
resources/letsgopikachu_letsgoeevee/: moves.json  species.json
resources/ultrasun_ultramoon/: moves.json  species.json
resources/x_y/: moves.json  species.json
src/: combinatorial_optim.rs  game_theory.rs  lib.rs  main.rs  move_.rs  pokemon.rs  setup.rs  solution.rs  species.rs  state.rs
src/battle_ai/: data.rs  game_theory.rs  mod.rs  move_.rs  move_effects.rs  pokemon.rs  search_tree.rs  species.rs  state.rs
