[package]
name = "pokemon_battle_analysis_v5"
version = "0.1.0"
authors = ["Wallace Watler <watlerkw@msoe.edu>"]
edition = "2018"

[features]
print-battle = []

[dependencies]
almost = "0.2.0"
csv = "1.1.4"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug-assertions = false
debug = false
codegen-units = 1
lto = "fat"
overflow-checks = false
