[package]
name = "pokemon_battle_analysis_v5"
version = "0.1.0"
authors = ["Wallace Watler <watlerkw@msoe.edu>"]
edition = "2018"

[features]
print-battle = []

[dependencies]
almost = "0.2.0"
csv = "1.1.4"
num = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
statrs = "0.13.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
debug-assertions = false
debug = false
codegen-units = 1
lto = "fat"
overflow-checks = false
